--- a/MemoryGameLeprechauns/MemoryGameLeprechauns/My Project/Resources.resx
+++ b/MemoryGameLeprechauns/MemoryGameLeprechauns/My Project/Resources.resx
@@ -136,9 +136,6 @@
   <data name="TheLeprechaunsButton_Hard_Clicked" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TheLeprechaunsButton-Hard-Clicked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Background" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="TheLeprechaunsButton_Easy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TheLeprechaunsButton-Easy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -162,5 +159,11 @@
   </data>
   <data name="TheLeprechaunsCardSelected" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TheLeprechaunsCardSelected.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TheLeprechaunsStartScherm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsStartScherm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
