--- a/MemoryGameLeprechauns/MemoryGameLeprechauns/My Project/Resources.resx
+++ b/MemoryGameLeprechauns/MemoryGameLeprechauns/My Project/Resources.resx
@@ -166,4 +166,10 @@
   <data name="TheLeprechaunsStartScherm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TheLeprechaunsStartScherm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TheLeprechaunsButton_Exit_Clicked1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsButton_Exit_Clicked1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TheLeprechaunsButton_Menu_clicked_new1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsButton_Menu_clicked_new1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
