--- a/MemoryGameLeprechauns/MemoryGameLeprechauns/My Project/Resources.resx
+++ b/MemoryGameLeprechauns/MemoryGameLeprechauns/My Project/Resources.resx
@@ -172,4 +172,10 @@
   <data name="TheLeprechaunsButton_Menu_clicked_new1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TheLeprechaunsButton_Menu_clicked_new1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Leprechaun_Song_Intro" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Leprechaun Song Intro.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Leprechaun_Song_Loop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Leprechaun Song Loop.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
