--- a/MemoryGameLeprechauns/MemoryGameLeprechauns/My Project/Resources.resx
+++ b/MemoryGameLeprechauns/MemoryGameLeprechauns/My Project/Resources.resx
@@ -118,26 +118,59 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="TheLeprechaunsButton_Menu_clicked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsButton_Menu_clicked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TheLeprechaunsButton_Menu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsButton_Menu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Splashscreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Splashscreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TheLeprechaunsCard" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TheLeprechaunsCard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TheLeprechaunsButton_Easy_Clicked" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TheLeprechaunsButton-Easy-Clicked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TheLeprechaunsButton_Medium" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TheLeprechaunsButton-Medium.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TheLeprechaunsButton_Exit" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TheLeprechaunsButton-Exit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TheLeprechaunsButton_Hard_Clicked" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TheLeprechaunsButton-Hard-Clicked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TheLeprechaunsSpeelveld" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsSpeelveld.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TheLeprechaunsCard" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsCard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TheLeprechaunsButton_Medium_Clicked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsButton-Medium-Clicked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="TheLeprechaunsButton_Easy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TheLeprechaunsButton-Easy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TheLeprechaunsButton_Exit_Clicked1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsButton_Exit_Clicked1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TheLeprechaunsButton_Easy_Clicked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsButton-Easy-Clicked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Leprechaun_Song_Intro" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Leprechaun Song Intro.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="TheLeprechaunsButton_Exit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsButton-Exit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Leprechaun_Song_Loop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Leprechaun Song Loop.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="TheLeprechaunsButton_Medium" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsButton-Medium.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TheLeprechaunsStartScherm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsStartScherm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TheLeprechaunsButton_Menu_clicked_new1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsButton_Menu_clicked_new1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TheLeprechaunsCardSelected" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TheLeprechaunsCardSelected.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TheLeprechaunsButton_Hard" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TheLeprechaunsButton-Hard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,37 +178,7 @@
   <data name="TheLeprechaunsButton_Exit_Clicked" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TheLeprechaunsButton-Exit-Clicked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TheLeprechaunsButton_Medium_Clicked" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TheLeprechaunsButton-Medium-Clicked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TheLeprechaunsSpeelveld" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TheLeprechaunsSpeelveld.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TheLeprechaunsButton_Menu" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TheLeprechaunsButton_Menu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TheLeprechaunsButton_Menu_clicked" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TheLeprechaunsButton_Menu_clicked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TheLeprechaunsCardSelected" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TheLeprechaunsCardSelected.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Background" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TheLeprechaunsStartScherm" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TheLeprechaunsStartScherm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TheLeprechaunsButton_Exit_Clicked1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TheLeprechaunsButton_Exit_Clicked1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TheLeprechaunsButton_Menu_clicked_new1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TheLeprechaunsButton_Menu_clicked_new1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Leprechaun_Song_Intro" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Leprechaun Song Intro.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="Leprechaun_Song_Loop" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Leprechaun Song Loop.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="Winmessage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Winmessage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
